mux-compiler/tests/snapshots/lexer_integration__file_lexer-10.snap
---
source: tests/lexer_integration.rs
expression: "format!(\"{:#?}\", actual_token_types.to_owned())"
---
[
    LineComment(
        "References",
    ),
    NewLine,
    Id(
        "int",
    ),
    Id(
        "val",
    ),
    Eq,
    Int(
        10,
    ),
    NewLine,
    Auto,
    Id(
        "r",
    ),
    Eq,
    Ampersand,
    Id(
        "val",
    ),
    NewLine,
    Id(
        "print",
    ),
    OpenParen,
    Id(
        "r",
    ),
    CloseParen,
    NewLine,
    Id(
        "r",
    ),
    Eq,
    Int(
        20,
    ),
    NewLine,
    Id(
        "print",
    ),
    OpenParen,
    Id(
        "val",
    ),
    CloseParen,
    NewLine,
    NewLine,
    LineComment(
        "References to list elements",
    ),
    NewLine,
    Auto,
    Id(
        "numbers",
    ),
    Eq,
    OpenBracket,
    Int(
        1,
    ),
    Comma,
    Int(
        2,
    ),
    Comma,
    Int(
        3,
    ),
    Comma,
    Int(
        4,
    ),
    Comma,
    Int(
        5,
    ),
    CloseBracket,
    NewLine,
    Auto,
    Id(
        "first",
    ),
    Eq,
    Ampersand,
    Id(
        "numbers",
    ),
    OpenBracket,
    Int(
        0,
    ),
    CloseBracket,
    NewLine,
    Id(
        "print",
    ),
    OpenParen,
    Id(
        "first",
    ),
    CloseParen,
    NewLine,
    NewLine,
    LineComment(
        "Function taking a reference",
    ),
    NewLine,
    Func,
    Id(
        "update",
    ),
    OpenParen,
    Id(
        "ref",
    ),
    Colon,
    Ampersand,
    Id(
        "int",
    ),
    CloseParen,
    OpenBrace,
    NewLine,
    Id(
        "ref",
    ),
    Eq,
    Id(
        "ref",
    ),
    Plus,
    Int(
        1,
    ),
    NewLine,
    CloseBrace,
    NewLine,
    NewLine,
    Id(
        "update",
    ),
    OpenParen,
    Ampersand,
    Id(
        "val",
    ),
    CloseParen,
    NewLine,
    Id(
        "print",
    ),
    OpenParen,
    Id(
        "val",
    ),
    CloseParen,
    NewLine,
]
