mux-compiler/tests/snapshots/lexer_integration__file_lexer-3.snap
---
source: tests/lexer_integration.rs
expression: "format!(\"{:#?}\", actual_token_types.to_owned())"
---
[
    LineComment(
        "Functions and lambdas",
    ),
    NewLine,
    Func,
    Id(
        "add",
    ),
    OpenParen,
    Id(
        "int",
    ),
    Id(
        "a",
    ),
    Comma,
    Id(
        "int",
    ),
    Id(
        "b",
    ),
    CloseParen,
    Returns,
    Id(
        "int",
    ),
    OpenBrace,
    NewLine,
    Return,
    Id(
        "a",
    ),
    Plus,
    Id(
        "b",
    ),
    NewLine,
    CloseBrace,
    NewLine,
    NewLine,
    Func,
    Id(
        "greet",
    ),
    OpenParen,
    Id(
        "string",
    ),
    Id(
        "name",
    ),
    Comma,
    Id(
        "int",
    ),
    Id(
        "times",
    ),
    Eq,
    Int(
        1,
    ),
    CloseParen,
    Returns,
    Id(
        "void",
    ),
    OpenBrace,
    NewLine,
    For,
    Id(
        "i",
    ),
    In,
    Id(
        "range",
    ),
    OpenParen,
    Int(
        0,
    ),
    Comma,
    Id(
        "times",
    ),
    CloseParen,
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "Hello ",
    ),
    Plus,
    Id(
        "name",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    CloseBrace,
    NewLine,
    NewLine,
    LineComment(
        "Lambda examples",
    ),
    NewLine,
    Auto,
    Id(
        "square",
    ),
    Eq,
    Func,
    OpenParen,
    Id(
        "int",
    ),
    Id(
        "n",
    ),
    CloseParen,
    OpenBrace,
    Return,
    Id(
        "n",
    ),
    Star,
    Id(
        "n",
    ),
    CloseBrace,
    NewLine,
    Auto,
    Id(
        "doubled",
    ),
    Eq,
    Func,
    OpenParen,
    Auto,
    Id(
        "x",
    ),
    CloseParen,
    OpenBrace,
    Return,
    Id(
        "x",
    ),
    Star,
    Int(
        2,
    ),
    CloseBrace,
    NewLine,
]
